Fix navbar vs messages z-index sorting issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -649,7 +649,6 @@ footer a:hover, footer a:active {
   top: 42px;
   left: 0;
   margin: 0;
-  z-index: 100;
 }
 
 #innermenu > ul > li > div > ul > li:last-child {
